Added a code formatter Implemented all billing Fixed static analysis issues